# db-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_test.sh  client_main.cpp  main.cpp  server_main.cpp
.github/workflows/: build.yml
bson/: CMakeLists.txt  bson-inl.h  bson_tests.cc  json.h
client/: CMakeLists.txt  command.cpp  command.hpp  commandFactory.cpp  commandFactory.hpp  edb.cpp  edb.hpp
cmake-repo/01-basic/A-hello-cmake/: CMakeLists.txt  build.sh  clean.sh  main.cpp
cmake-repo/01-basic/B-hello-headers/: CMakeLists.txt  build.sh  clean.sh
cmake-repo/01-basic/B-hello-headers/include/: Hello.h
cmake-repo/01-basic/B-hello-headers/src/: Hello.cpp  main.cpp
cmake-repo/01-basic/C-static-library/: CMakeLists.txt  build.sh
cmake-repo/01-basic/C-static-library/src/: Hello.cpp  main.cpp
cmake-repo/01-basic/D-shared-library/: CMakeLists.txt  build.sh
cmake-repo/01-basic/D-shared-library/src/: Hello.cpp  main.cpp
cmake-repo/01-basic/E-installing/: CMakeLists.txt  build.sh  cmake-examples.conf
cmake-repo/01-basic/E-installing/include/installing/: Hello.h
cmake-repo/01-basic/E-installing/src/: Hello.cpp  main.cpp
cmake-repo/01-basic/F-build-type/: CMakeLists.txt  build.sh  main.cpp  readme.md
cmake-repo/01-basic/G-compile-flags/: CMakeLists.txt  build.sh  main.cpp  readme.md
cmake-repo/01-basic/H-3rd-party-library/: CMakeLists.txt  boost_install.sh  build.sh  main.cpp
cmake-repo/01-basic/I-compiling-with-clang/: main.cpp  readme.md
cmake-repo/01-basic/L-cpp-standard/: readme.md
cmake-repo/01-basic/L-cpp-standard/i-common-method/: CMakeLists.txt  build.sh  main.cpp  readme.md
cmake-repo/01-basic/L-cpp-standard/ii-cxx-standard/: CMakeLists.txt  build.sh  main.cpp  readme.md
cmake-repo/01-basic/L-cpp-standard/iii-compile-features/: CMakeLists.txt  build.sh  main.cpp
cmake-repo/02-sub-projects/: CMakeLists.txt  README.md  build.sh
cmake-repo/02-sub-projects/main_proj/: CMakeLists.txt  main.cpp
cmake-repo/02-sub-projects/sublib1/: CMakeLists.txt
cmake-repo/02-sub-projects/sublib1/include/: sublib1.h
cmake-repo/02-sub-projects/sublib1/src/: sublib1.cpp
cmake-repo/02-sub-projects/sublib2/: CMakeLists.txt
cmake-repo/02-sub-projects/sublib2/include/: sublib2.h
cmake-repo/02-sub-projects/sublib2/src/: sublib2.cpp
cmake-repo/08-gdb/: README.md
core/: CMakeLists.txt  core.cpp  core.hpp
db-repo/: CMakeLists.txt  build.sh  build_boost.sh
db-repo/bak_src/: Makefile  Makefile.am  Makefile.in  README.md  docker-ubuntu.sh
db-repo/bak_src/autom4te.cache/: output.1
db-repo/bak_src/bson/include/: bson_db.h  bsonelement.h
db-repo/bson/: bsonassert.h  bsonobj.cpp  bsonobj.h  bsontypes.h
db-repo/include/emeralddb/: core.hpp  ossSocket.hpp
db-repo/oss/: ossSocket.cpp
db-repo/src/: .configure.in.bak  config.h  config.h.in  configure
db-repo/src/.deps/: dbengine-pmdMain.Tpo
db-repo/src/autom4te.cache/: requests  traces.1
db-repo/src/bson/: CMakeLists.txt  build.sh
db-repo/src/bson/include/: bsonobj.h  builder.h  oid.h
db-repo/src/bson/src/: json.cpp  nonce.cpp  oid.cpp
db-repo/src/pmd/: pmdMain.cpp
doc/: client.md  debug_with_gdb.md  design_list.md  lock.md  question_list.md
logger/: CMakeLists.txt  pd.cpp  pd.hpp
oss/: CMakeLists.txt  ossPrimitiveFileOp.cpp  ossPrimitiveFileOp.hpp  ossQueue.hpp  ossSocket.cpp  ossSocket.hpp  ossXLatch.hpp
pmd/: CMakeLists.txt  pmd.cpp  pmd.hpp  pmdOptions.cpp  pmdOptions.hpp  pmdTcpListener.cpp
src/: Makefile  build.sh  config.status
src/autom4te.cache/: output.2  traces.0
test/: CMakeLists.txt  oss_test.cpp  pthread_test.cpp
thread/: CMakeLists.txt  nonblocking_threadpool.hpp  thread_pool.cpp  thread_pool.hpp
